--- a/network/templates/network/index.html
+++ b/network/templates/network/index.html
@@ -1,5 +1,5 @@
 {% extends "network/layout.html" %}
-
+{% load static %}
 {% block body %}
 {% if user.is_authenticated %}
 <div class="col-md-12 mt-3">
@@ -7,6 +7,7 @@
         <div class="card-header">
 New Post
         </div>
+        
         <div class="card-body">
         <form action="{% url 'index' %}" method="post">
             {% csrf_token %}
@@ -18,32 +19,49 @@ New Post
 </div>
 {% endif %}
 
-{% if post_list %}
- 
-<div class="page-body">
-    <div class="container-xl">
-        <div class="row ">
             {%for item in post_list%}
-            <div><a href="{% url 'profile' item.user.id %}">{{item.user.username}}</a></div>       
-                 <p class="text-muted">{{item.content}}.</p>
-                 <p class="text-muted">{{item.date}}.</p>
-                  
-        </div>
-    </div>
+               
+            <div class="card-actions">
+                <div class="card-body">
+                <a   href="{% url 'profile' item.user.id %}">{{item.user.username}}</a> 
+                 <small class="text-muted">{{ item.date}}</small>
+                 <p class="article-content">{{ item.content }}</p>
+           
+          </div>
+
+
+
+                 <div class="card-footer">
+                    <div>
+                       <a   class="btn btn-sm btn-outline-primary" id="{{item.id}}">
+                   <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                      <desc>Download more icon variants from https://tabler-icons.io/i/thumb-up</desc>
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                      <path d="M7 11v8a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1 -1v-7a1 1 0 0 1 1 -1h3a4 4 0 0 0 4 -4v-1a2 2 0 0 1 4 0v5h3a2 2 0 0 1 2 2l-1 5a2 3 0 0 1 -2 2h-7a3 3 0 0 1 -3 -3"></path>
+                   </svg>
+                           <p class="testp" style="display:inline">like</p>
+                                         </a>
+                    <p style="display:inline;" id="{{item.id}}{{'likes'}}"> {{item.likes}}</p>
+                    </div>
+                </div>
+            </div>
+         </article>
+    
+
+<div>
+     <span>
+        {% if page_obj.has_previous %}
+        <a href="?page={{page_obj.previous_page_number}}">previous</a>
+        {% endif %}
+        <span>{{ page_obj.number }}</span>
+        {% if page_obj.has_next %}
+        <a href="?page={{page_obj.next_page_number}}">next</a>
+        {% endif %}
+    </span>
 </div>
 {% endfor %}
+{% endblock %} 
 
-
-{% endif %}
-
-
-
-
-
-
-
-
-
-
-
+{% block script %}
+<script src="{% static 'network/indox.js' %}"></script>
 {% endblock %}
